--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 7>Jupyter Notebook for Coursera Capstone Projectn</font></h1>\n"
+    "<h1 align=center><font size = 7>Jupyter Notebook for Coursera Capstone Project</font></h1>\n"
    ]
   },
   {
